# FutureAffinity_Repro

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  data-and-weights.md  equivariance.md  limitations.md  metrics.md  model-card.md  references.md  roadmap.md  splits-and-leakage.md
examples/: aspirin_lysozyme.json
scripts/: generate_test_results.py  run_demo.py
solutions/: 01_feature_extraction.py  02_input_embedding.py  03_pairformer.py  04_diffusion.py  05_multitask_heads.py  06_synthetic_supervision.py  07_inference_and_export.py  08_metrics_and_equivariance.py  README.md
src/futureaffinity_reproduction/chem/: residues.py
src/futureaffinity_reproduction/datasources/: mock_docking.py
src/futureaffinity_reproduction/export/: mmcif.py
src/futureaffinity_reproduction/features/: builder.py  (+1 more)
tests/: test_pipeline.py  test_tutorials.py
tests/expected/: 01_feature_extraction.json  02_input_embedding.json  03_pairformer.json  04_diffusion.json  05_multitask_heads.json  06_synthetic_supervision.json  07_inference_and_export.json  08_metrics_and_equivariance.json
tutorials/: README.md
tutorials/01_feature_extraction/: README.md  exercise.py
tutorials/02_input_embedding/: README.md  exercise.py
tutorials/03_pairformer/: README.md  exercise.py
tutorials/04_diffusion/: README.md  exercise.py
tutorials/05_multitask_heads/: README.md  exercise.py
tutorials/06_synthetic_supervision/: README.md  exercise.py
tutorials/07_inference_and_export/: README.md  exercise.py
tutorials/08_metrics_and_equivariance/: README.md  exercise.py
(+8 files in other folders)
