[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "futureaffinity-reproduction"
version = "0.1.0"
description = "Educational, from-scratch reproduction of a co-folding + affinity foundation model."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "FutureAffinity contributors" }]
dependencies = []

[project.optional-dependencies]
ml = ["torch>=2.2"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py38"
